--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,231 @@
-h1 {
-  color: green;
+.font-13 {
+  font-size: 13px;
+}
+
+.font-14 {
+  font-size: 14px;
+}
+
+.font-15 {
+  font-size: 15px;
+}
+
+.font-16 {
+  font-size: 16px;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.a-center {
+  align-items: center;
+}
+
+.j-center {
+  justify-content: center;
+}
+
+.ps-relative {
+  position: relative;
+}
+
+.ps-absolute {
+  position: absolute;
+}
+
+.d-inline-block, .main-wrapper .main-header .navigation .navigation-list .navigation-item .navigation-link.sign-in, .main-wrapper .main-header .navigation .navigation-list .navigation-item .navigation-link.apps-icon {
+  display: inline-block;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+ul {
+  list-style: none;
+}
+
+input, button {
+  background: transparent;
+  border: 0;
+  outline: 0;
+}
+
+body {
+  font-family: arial, sans-serif;
+  background: #202124;
+}
+
+.main-wrapper {
+  min-height: 100vh;
+}
+.main-wrapper .main-header .navigation {
+  height: 60px;
+  padding: 6px 16px;
+  text-align: right;
+}
+.main-wrapper .main-header .navigation .navigation-list {
+  height: 100%;
+  justify-content: end;
+}
+.main-wrapper .main-header .navigation .navigation-list .navigation-item {
+  padding: 0 16px;
+}
+.main-wrapper .main-header .navigation .navigation-list .navigation-item:last-child {
+  padding-right: 0;
+}
+.main-wrapper .main-header .navigation .navigation-list .navigation-item .navigation-link {
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+}
+.main-wrapper .main-header .navigation .navigation-list .navigation-item .navigation-link:hover {
+  text-decoration: underline;
+}
+.main-wrapper .main-header .navigation .navigation-list .navigation-item .navigation-link.apps-icon {
+  width: 24px;
+  height: 24px;
+  background: url("../images/apps_icon.png") no-repeat;
+  background-position: center;
+  background-size: contain;
+  filter: invert(1);
+}
+.main-wrapper .main-header .navigation .navigation-list .navigation-item .navigation-link.sign-in {
+  background: #8ab4f7;
+  color: #000;
+  padding: 10px 16px;
+  border-radius: 4px;
+  min-width: 96px;
+  text-align: center;
+}
+.main-wrapper .main-header .navigation .navigation-list .navigation-item .navigation-link.sign-in:hover {
+  background: #698abf;
+  text-decoration: none;
+}
+.main-wrapper .search-container {
+  min-height: calc(100vh - 154px);
+  padding: 6px 30px;
+}
+.main-wrapper .search-container .search-wrapper {
+  width: 100%;
+  max-width: 548px;
+  text-align: center;
+}
+.main-wrapper .search-container .search-wrapper .logo-wrapper {
+  margin-bottom: 16px;
+}
+.main-wrapper .search-container .search-wrapper .serach-box {
+  min-height: 46px;
+  border: 1px solid #7e7d7d;
+  border-radius: 46px;
+  padding: 0 20px;
+}
+.main-wrapper .search-container .search-wrapper .serach-box:hover {
+  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
+}
+.main-wrapper .search-container .search-wrapper .serach-box .search-icon {
+  width: 14px;
+  height: 14px;
+  background: url("../images/seach.svg") no-repeat;
+  background-position: center;
+  filter: invert(1);
+}
+.main-wrapper .search-container .search-wrapper .serach-box .voice-icon, .main-wrapper .search-container .search-wrapper .serach-box .camera-icon {
+  width: 24px;
+  height: 24px;
+}
+.main-wrapper .search-container .search-wrapper .serach-box .voice-icon {
+  background: url("../images/voice-icon.svg") no-repeat;
+  background-position: center;
+}
+.main-wrapper .search-container .search-wrapper .serach-box .camera-icon {
+  background: url("../images/camera.svg") no-repeat;
+  background-position: center;
+  margin-left: 16px;
+}
+.main-wrapper .search-container .search-wrapper .serach-box .search-field {
+  flex-grow: 1;
+  color: #fff;
+  padding: 0 16px;
+}
+.main-wrapper .search-container .search-wrapper .label-box {
+  gap: 16px;
+  margin: 32px 0;
+}
+.main-wrapper .search-container .search-wrapper .label-box .google-search {
+  padding: 8px 16px;
+  border-radius: 6px;
+  background: #303134;
+  color: #fff;
+}
+@media only screen and (min-width: 768px) {
+  .main-wrapper .search-container .search-wrapper .language-wrapper .language-nav {
+    display: flex;
+  }
+}
+.main-wrapper .search-container .search-wrapper .language-wrapper .language-nav .search-offered {
+  color: #fff;
+  margin-right: 8px;
+}
+@media only screen and (max-width: 767px) {
+  .main-wrapper .search-container .search-wrapper .language-wrapper .language-nav .search-offered {
+    margin-bottom: 16px;
+  }
+}
+.main-wrapper .search-container .search-wrapper .language-wrapper .language-nav .language-list {
+  flex-wrap: wrap;
+  justify-content: center;
+}
+@media only screen and (min-width: 768px) {
+  .main-wrapper .search-container .search-wrapper .language-wrapper .language-nav .language-list {
+    flex-wrap: nowrap;
+  }
+}
+.main-wrapper .search-container .search-wrapper .language-wrapper .language-nav .language-list .language-link {
+  color: #8ab4f7;
+  padding: 0 4px;
+  text-decoration: none;
+}
+.main-wrapper .search-container .search-wrapper .language-wrapper .language-nav .language-list .language-link:hover {
+  text-decoration: underline;
+}
+.main-wrapper .footer {
+  background: #171717;
+}
+.main-wrapper .footer .footer-region {
+  padding: 14px 30px;
+  border-bottom: 1px solid #7e7d7d;
+}
+.main-wrapper .footer .footer-region .footer-region-desc {
+  color: #fff;
+}
+.main-wrapper .footer .footer-nav {
+  justify-content: space-between;
+  padding: 15px 14px;
+}
+@media only screen and (min-width: 768px) {
+  .main-wrapper .footer .footer-nav {
+    display: flex;
+  }
+}
+.main-wrapper .footer .footer-nav .footer-link {
+  color: #fff;
+  text-decoration: none;
+  padding: 0 16px;
+}
+@media only screen and (max-width: 767px) {
+  .main-wrapper .footer .footer-nav .footer-link {
+    padding: 0 8px;
+    font-size: 12px;
+    display: inline-block;
+    margin-bottom: 12px;
+  }
+}
+.main-wrapper .footer .footer-nav .footer-link:hover {
+  text-decoration: underline;
 }
 
 /*# sourceMappingURL=style.css.map */
